--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "crosstalk-cli",
   "version": "0.1.3",
   "description": "Crosstalk Client Command Line Interface (CLI)",
-  "bin": "./bin/crosstalk",
+  "bin": {
+    "crosstalk" : "./bin/crosstalk"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
